--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   flutter_rating_bar: ^4.0.0
-  font_awesome_flutter: ^9.2.0
+  font_awesome_flutter: ^10.1.0
   geolocator: ^7.4.0
   google_fonts: ^2.1.0
   google_maps_flutter: ^2.0.6
@@ -62,6 +62,8 @@ dependencies:
   intl_phone_number_input: ^0.7.0+2
   sms_autofill: ^2.2.0
   slide_countdown: ^0.1.2
+  custom_radio_grouped_button: ^2.1.2
+  equatable: ^2.0.3
 
 dev_dependencies:
   flutter_test:
