--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,11 +57,20 @@ dependencies:
   cached_network_image: ^3.2.0
   animate_do: ^2.1.0
   socket_io_client: ^2.0.0-beta.4-nullsafety.0
-  firebase_messaging: ^11.4.2
-  firebase_core: ^1.17.1
+  firebase_messaging: ^12.0.2
+  firebase_core: ^1.20.1
   flutter_local_notifications: ^8.2.0
   we_slide: ^2.3.0
-  
+  flutter_ringtone_player: ^3.2.0
+  esc_pos_bluetooth: ^0.4.0
+  flutter_blue: ^0.8.0
+  slide_to_confirm: ^1.1.0
+  syncfusion_flutter_datepicker: ^19.1.54-beta
+  another_flushbar: ^1.10.12
+  bluetooth_enable_fork: ^0.1.4
+  timelines: ^0.1.0
+  flutter_phone_direct_caller: ^2.1.1
+  flutter_verification_code: ^1.1.3+1
 
 
 dev_dependencies:
@@ -96,6 +105,7 @@ flutter:
     - assets/peeps/face/
     - assets/peeps/facial/
     - assets/peeps/head/
+    - assets/sounds/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
