--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,6 +71,10 @@ dependencies:
   timelines: ^0.1.0
   flutter_phone_direct_caller: ^2.1.1
   flutter_verification_code: ^1.1.3+1
+  firebase_analytics: ^9.3.0
+  pinput: ^2.2.12
+  jumping_dot: ^0.0.4
+  flutter_polyline_points: ^1.0.0
 
 
 dev_dependencies:
