--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.15.1 <3.0.0"
+  sdk: ">=2.18.5 <3.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -32,50 +32,51 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   easy_debounce: ^2.0.1
-  flutter_launcher_icons: "^0.10.0"
+  flutter_launcher_icons: ^0.11.0
   fluro: ^2.0.3
   flutter_rating_bar: ^4.0.0
-  font_awesome_flutter: ^10.1.0
-  geolocator: ^7.4.0
-  google_fonts: ^2.1.0
+  font_awesome_flutter: ^10.4.0
+  geolocator: ^9.0.2
+  google_fonts: ^4.0.3
   google_maps_flutter: ^2.0.6
   http: ^0.13.3
   image_picker: ^0.8.4+2
-  permission_handler: ^8.1.4+2
+  permission_handler: ^10.2.0
   provider: ^6.0.0
   shared_preferences: ^2.0.5
-  smooth_page_indicator: ^0.3.0-nullsafety.0
+  smooth_page_indicator: ^1.0.1
   intl: ^0.17.0
   time_range_picker: ^2.0.1
   mime: ^1.0.1
   currency_text_input_formatter: ^2.1.5
   flutter_multi_formatter: ^2.4.1
-  flutter_svg: ^1.0.2
+  flutter_svg: ^2.0.4
   intl_phone_number_input: ^0.7.0+2
   sms_autofill: ^2.2.0
-  slide_countdown: ^0.1.2
+  slide_countdown: ^0.5.0
   equatable: ^2.0.3
   cached_network_image: ^3.2.0
-  animate_do: ^2.1.0
+  animate_do: ^3.0.2
   socket_io_client: ^2.0.0-beta.4-nullsafety.0
-  firebase_messaging: ^12.0.2
-  firebase_core: ^1.20.1
+  firebase_messaging: ^14.3.0
+  firebase_core: ^2.8.0
   flutter_local_notifications: ^8.2.0
   we_slide: ^2.3.0
   flutter_ringtone_player: ^3.2.0
   esc_pos_bluetooth: ^0.4.0
   flutter_blue: ^0.8.0
   slide_to_confirm: ^1.1.0
-  syncfusion_flutter_datepicker: ^19.1.54-beta
-  another_flushbar: ^1.10.12
+  syncfusion_flutter_datepicker: ^21.1.37
   bluetooth_enable_fork: ^0.1.4
   timelines: ^0.1.0
   flutter_phone_direct_caller: ^2.1.1
   flutter_verification_code: ^1.1.3+1
-  firebase_analytics: ^9.3.0
+  firebase_analytics: ^10.1.6
   pinput: ^2.2.12
   jumping_dot: ^0.0.4
   flutter_polyline_points: ^1.0.0
+
+  flutter_barcode_scanner: ^2.0.0
 
 
 dev_dependencies:
@@ -87,7 +88,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^1.0.0
+  flutter_lints: ^2.0.1
 
 
 # For information on the generic Dart part of this file, see the
@@ -97,7 +98,7 @@ dev_dependencies:
 flutter_icons:
   android: true
   ios: true
-  image_path: "assets/images/logo1.png"
+  image_path: "assets/images/logo_black_shop.jpg"
 
 
 flutter:
