--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -83,6 +83,8 @@ dependencies:
   http_parser: ^4.0.2
   esc_pos_utils: ^1.1.0
   image: ^3.0.2
+  curved_navigation_bar: ^1.0.3
+  animations: ^2.0.7
 
 
 dev_dependencies:
